[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/sigil.png" type="Texture" id=1]
[ext_resource path="res://Assets/chunk.gd" type="Script" id=2]
[ext_resource path="res://Assets/boost_sigil.png" type="Texture" id=3]
[ext_resource path="res://Assets/tube_map.tres" type="Material" id=4]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Cylinder"
surfaces/0 = {
"aabb": AABB( -8.66025, 0, -10, 17.3205, 100, 20 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 193, 193, 0, 109, 0, 147, 0, 193, 129, 0, 60, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 193, 63, 0, 109, 0, 147, 0, 63, 129, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 200, 66, 0, 0, 32, 193, 193, 0, 109, 0, 147, 0, 193, 129, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 200, 66, 0, 0, 32, 193, 63, 0, 109, 0, 147, 0, 63, 129, 0, 0, 0, 0, 103, 144, 10, 65, 0, 0, 0, 0, 255, 255, 159, 192, 129, 0, 0, 0, 0, 0, 129, 129, 170, 58, 0, 60, 103, 144, 10, 65, 0, 0, 0, 0, 255, 255, 159, 192, 193, 0, 109, 0, 147, 0, 193, 129, 170, 58, 0, 60, 103, 144, 10, 65, 0, 0, 200, 66, 255, 255, 159, 192, 129, 0, 0, 0, 0, 0, 129, 129, 170, 58, 0, 0, 103, 144, 10, 65, 0, 0, 200, 66, 255, 255, 159, 192, 193, 0, 109, 0, 147, 0, 193, 129, 170, 58, 0, 0, 102, 144, 10, 65, 0, 0, 0, 0, 1, 0, 160, 64, 129, 0, 0, 0, 0, 0, 129, 129, 85, 57, 0, 60, 102, 144, 10, 65, 0, 0, 0, 0, 1, 0, 160, 64, 193, 0, 147, 0, 109, 0, 193, 129, 85, 57, 0, 60, 102, 144, 10, 65, 0, 0, 200, 66, 1, 0, 160, 64, 129, 0, 0, 0, 0, 0, 129, 129, 85, 57, 0, 0, 102, 144, 10, 65, 0, 0, 200, 66, 1, 0, 160, 64, 193, 0, 147, 0, 109, 0, 193, 129, 85, 57, 0, 0, 122, 172, 106, 181, 0, 0, 0, 0, 0, 0, 32, 65, 193, 0, 147, 0, 109, 0, 193, 129, 255, 55, 0, 60, 122, 172, 106, 181, 0, 0, 0, 0, 0, 0, 32, 65, 63, 0, 147, 0, 109, 0, 63, 129, 255, 55, 0, 60, 122, 172, 106, 181, 0, 0, 200, 66, 0, 0, 32, 65, 193, 0, 147, 0, 109, 0, 193, 129, 255, 55, 0, 0, 122, 172, 106, 181, 0, 0, 200, 66, 0, 0, 32, 65, 63, 0, 147, 0, 109, 0, 63, 129, 255, 55, 0, 0, 103, 144, 10, 193, 0, 0, 0, 0, 254, 255, 159, 64, 63, 0, 147, 0, 109, 0, 63, 129, 85, 53, 0, 60, 103, 144, 10, 193, 0, 0, 0, 0, 254, 255, 159, 64, 127, 0, 0, 0, 0, 0, 127, 129, 85, 53, 0, 60, 103, 144, 10, 193, 0, 0, 200, 66, 254, 255, 159, 64, 63, 0, 147, 0, 109, 0, 63, 129, 85, 53, 0, 0, 103, 144, 10, 193, 0, 0, 200, 66, 254, 255, 159, 64, 127, 0, 0, 0, 0, 0, 127, 129, 85, 53, 0, 0, 103, 144, 10, 193, 0, 0, 0, 0, 254, 255, 159, 192, 63, 0, 109, 0, 147, 0, 63, 129, 85, 49, 0, 60, 103, 144, 10, 193, 0, 0, 0, 0, 254, 255, 159, 192, 127, 0, 0, 0, 0, 0, 127, 129, 85, 49, 0, 60, 103, 144, 10, 193, 0, 0, 200, 66, 254, 255, 159, 192, 63, 0, 109, 0, 147, 0, 63, 129, 85, 49, 0, 0, 103, 144, 10, 193, 0, 0, 200, 66, 254, 255, 159, 192, 127, 0, 0, 0, 0, 0, 127, 129, 85, 49, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 7, 0, 5, 0, 0, 0, 2, 0, 7, 0, 4, 0, 10, 0, 8, 0, 4, 0, 6, 0, 10, 0, 9, 0, 14, 0, 12, 0, 9, 0, 11, 0, 14, 0, 13, 0, 18, 0, 16, 0, 13, 0, 15, 0, 18, 0, 17, 0, 23, 0, 21, 0, 17, 0, 19, 0, 23, 0, 20, 0, 3, 0, 1, 0, 20, 0, 22, 0, 3, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 36,
"material": ExtResource( 4 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 0, 0, -10, 8.6603, 100, -5, 8.6603, 0, -5, 0, 0, -10, 0, 100, -10, 8.6603, 100, -5, 8.6603, 0, -5, 8.6603, 100, 5, 8.6603, 0, 5, 8.6603, 0, -5, 8.6603, 100, -5, 8.6603, 100, 5, 8.6603, 0, 5, 0, 100, 10, 0, 0, 10, 8.6603, 0, 5, 8.6603, 100, 5, 0, 100, 10, 0, 0, 10, -8.6603, 100, 5, -8.6603, 0, 5, 0, 0, 10, 0, 100, 10, -8.6603, 100, 5, -8.6603, 0, 5, -8.6603, 100, -5, -8.6603, 0, -5, -8.6603, 0, 5, -8.6603, 100, 5, -8.6603, 100, -5, -8.6603, 0, -5, 0, 100, -10, 0, 0, -10, -8.6603, 0, -5, -8.6603, 100, -5, 0, 100, -10 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.5, 10, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 48, 1, 48 )

[node name="tower_tube" type="Spatial"]
script = ExtResource( 2 )

[node name="Cylinder" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Cylinder"]

[node name="CollisionShape" type="CollisionShape" parent="Cylinder/StaticBody"]
shape = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0 )
pixel_size = 0.06
billboard = 1
texture = ExtResource( 1 )

[node name="SlowTrigger" type="Area" parent="Sprite3D"]

[node name="CollisionShape" type="CollisionShape" parent="Sprite3D/SlowTrigger"]
shape = SubResource( 3 )

[node name="LoadTrigger" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )

[node name="CollisionShape" type="CollisionShape" parent="LoadTrigger"]
shape = SubResource( 4 )

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 200, 0 )
pixel_size = 0.06
billboard = 1
texture = ExtResource( 3 )

[node name="SpeedTrigger" type="Area" parent="Sprite3D2"]

[node name="CollisionShape" type="CollisionShape" parent="Sprite3D2/SpeedTrigger"]
shape = SubResource( 3 )
